--- a/index.html
+++ b/index.html
@@ -1,210 +1,98 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <title>AI Undangan Online | EtaWeb</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <title>AI Undangan Pernikahan</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
-    * { box-sizing: border-box; }
     body {
       margin: 0;
-      font-family: 'Segoe UI', Arial, sans-serif;
+      font-family: Arial, sans-serif;
       background: linear-gradient(135deg,#0f2027,#203a43,#2c5364);
       color: #fff;
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      padding: 20px;
     }
-
-    .container {
-      max-width: 420px;
-      width: 100%;
+    .card {
+      max-width: 500px;
+      margin: auto;
       background: #0d0d0d;
-      border-radius: 20px;
-      padding: 25px;
-      box-shadow: 0 20px 50px rgba(0,0,0,.7);
-      text-align: center;
-      animation: fadeIn .8s ease;
+      border-radius: 16px;
+      padding: 20px;
+      box-shadow: 0 20px 40px rgba(0,0,0,.6);
     }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    .logo img {
-      width: 90px;
-      margin-bottom: 10px;
-    }
-
     h1 {
+      text-align: center;
       color: #ff4d4d;
-      margin: 10px 0 5px;
     }
-
-    .subtitle {
-      font-size: 14px;
-      color: #ccc;
-      margin-bottom: 15px;
-    }
-
-    .price {
-      margin-bottom: 20px;
-    }
-
-    .price s {
-      font-size: 14px;
-      color: #777;
-    }
-
-    .price strong {
-      display: block;
-      font-size: 22px;
-      color: #00ffcc;
-      margin-top: 5px;
-    }
-
-    textarea {
+    textarea, select {
       width: 100%;
-      min-height: 120px;
+      margin-top: 10px;
       padding: 12px;
-      border-radius: 12px;
+      border-radius: 10px;
       border: none;
       font-size: 14px;
-      resize: none;
-      margin-top: 10px;
     }
-
     button {
       width: 100%;
-      padding: 15px;
+      padding: 14px;
       margin-top: 15px;
-      border-radius: 14px;
+      border-radius: 12px;
       border: none;
       font-size: 16px;
-      font-weight: bold;
       background: linear-gradient(135deg,#ff4d4d,#ff0000);
       color: #fff;
       cursor: pointer;
-      transition: transform .15s ease;
     }
-
-    button:active {
-      transform: scale(.96);
+    button.secondary {
+      background: linear-gradient(135deg,#00ffcc,#00c3a0);
+      color: #000;
     }
-
     pre {
       background: #000;
       padding: 15px;
-      border-radius: 14px;
+      border-radius: 12px;
       margin-top: 15px;
       font-size: 14px;
       white-space: pre-wrap;
-      line-height: 1.6;
-      max-height: 260px;
+      max-height: 300px;
       overflow-y: auto;
-      text-align: left;
     }
-
-    .next-btn {
-      margin-top: 15px;
-      background: linear-gradient(135deg,#00ffcc,#00bfa5);
-      color: #000;
-    }
-
-    .footer {
-      margin-top: 12px;
+    .info {
       font-size: 12px;
-      color: #777;
-    }
-
-    /* AMPLop */
-    .envelope-wrapper {
-      display: flex;
-      justify-content: center;
-      margin-bottom: 15px;
-    }
-
-    .envelope {
-      width: 90px;
-      height: 90px;
-      background: #c1121f;
-      border-radius: 18px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-      transition: transform .4s ease;
-    }
-
-    .envelope img {
-      width: 45px;
-    }
-
-    .envelope.opened {
-      transform: scale(1.2) rotate(10deg);
-      opacity: 0;
+      color: #aaa;
+      margin-top: 10px;
+      text-align: center;
     }
   </style>
 </head>
 
 <body>
 
-<div class="container">
+<div class="card">
+  <h1>AI Undangan Pernikahan</h1>
 
-  <!-- LOGO -->
-  <div class="logo">
-    <img src="logo.png" alt="EtaWeb Logo">
+  <p>Tulis bebas rencana pernikahanmu:</p>
+  <textarea id="inputText" placeholder="Contoh: Nikah di Bandung bulan Juli, akad pagi, resepsi siang, ketemu pas kerja"></textarea>
+
+  <p>Pilih lagu undangan:</p>
+  <select id="musicSelect">
+    <option value="wedding1.mp3">🎵 You're Still The One – Shania Twain</option>
+    <option value="wedding2.mp3">🎵 Pilihanku – MALIQ & D'Essentials</option>
+    <option value="wedding3.mp3">🎵 Beautiful In White – Shane Filan</option>
+  </select>
+
+  <button onclick="generateAI()">✨ Generate Undangan AI</button>
+
+  <pre id="result">Hasil AI akan muncul di sini…</pre>
+
+  <button class="secondary" onclick="saveAndOpen()">➡️ Buat Web Undangan</button>
+
+  <div class="info">
+    Gratis • Tanpa registrasi • Dibuat dengan AI
   </div>
-
-  <!-- AMPL0P -->
-  <div class="envelope-wrapper">
-    <div class="envelope" id="openEnvelope">
-      <img src="https://cdn-icons-png.flaticon.com/512/561/561127.png">
-    </div>
-  </div>
-  <div class="subtitle">Klik amplop untuk membuka undangan</div>
-
-  <!-- TITLE -->
-  <h1>AI Undangan Online</h1>
-  <p class="subtitle">Buat undangan digital otomatis langsung dari HP</p>
-
-  <!-- PRICE -->
-  <div class="price">
-    <s>Rp100.000</s>
-    <strong>GRATIS</strong>
-  </div>
-
-  <!-- INPUT -->
-  <textarea id="prompt" placeholder="Contoh:
-Undangan pernikahan
-Hilmi Al Hanif & Yanti
-12 Januari 2026
-Jl Ahmad Yani, Bandung
-Bahasa formal dan islami"></textarea>
-
-  <!-- GENERATE -->
-  <button onclick="generateInvitation()">✨ Buat Undangan AI</button>
-
-  <!-- RESULT -->
-  <pre id="hasilAI">Hasil teks AI akan muncul di sini...</pre>
-
-  <!-- NEXT -->
-  <button class="next-btn" onclick="window.location.href='undangan.html'">
-    👉 Lanjut ke Web Undangan
-  </button>
-
-  <!-- FOOTER -->
-  <div class="footer">
-    Dibuat dengan ❤️ oleh EtaWeb
-  </div>
-
 </div>
 
-<!-- SCRIPT -->
 <script src="script.js"></script>
-
 </body>
 </html>
