--- a/index.html
+++ b/index.html
@@ -4,95 +4,55 @@
   <meta charset="UTF-8">
   <title>AI Undangan Pernikahan</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(135deg,#0f2027,#203a43,#2c5364);
-      color: #fff;
-      padding: 20px;
-    }
-    .card {
-      max-width: 500px;
-      margin: auto;
-      background: #0d0d0d;
-      border-radius: 16px;
-      padding: 20px;
-      box-shadow: 0 20px 40px rgba(0,0,0,.6);
-    }
-    h1 {
-      text-align: center;
-      color: #ff4d4d;
-    }
-    textarea, select {
-      width: 100%;
-      margin-top: 10px;
-      padding: 12px;
-      border-radius: 10px;
-      border: none;
-      font-size: 14px;
-    }
-    button {
-      width: 100%;
-      padding: 14px;
-      margin-top: 15px;
-      border-radius: 12px;
-      border: none;
-      font-size: 16px;
-      background: linear-gradient(135deg,#ff4d4d,#ff0000);
-      color: #fff;
-      cursor: pointer;
-    }
-    button.secondary {
-      background: linear-gradient(135deg,#00ffcc,#00c3a0);
-      color: #000;
-    }
-    pre {
-      background: #000;
-      padding: 15px;
-      border-radius: 12px;
-      margin-top: 15px;
-      font-size: 14px;
-      white-space: pre-wrap;
-      max-height: 300px;
-      overflow-y: auto;
-    }
-    .info {
-      font-size: 12px;
-      color: #aaa;
-      margin-top: 10px;
-      text-align: center;
-    }
+    body{margin:0;font-family:Arial;background:#0f2027;color:#fff;padding:18px}
+    .card{max-width:540px;margin:auto;background:#0d0d0d;border-radius:16px;padding:18px}
+    textarea,select,input{width:100%;margin-top:10px;padding:12px;border-radius:10px;border:none;font-size:14px}
+    button{width:100%;padding:14px;margin-top:12px;border-radius:12px;border:none;background:#ff2b2b;color:#fff;font-size:16px}
+    button.secondary{background:#00ffcc;color:#000}
+    pre{background:#000;padding:14px;border-radius:12px;white-space:pre-wrap;max-height:260px;overflow:auto;margin-top:12px}
+    .row{display:grid;grid-template-columns:1fr 1fr;gap:10px}
+    .small{font-size:12px;color:#aaa;margin-top:10px}
   </style>
 </head>
-
 <body>
+  <div class="card">
+    <h2>AI Undangan Pernikahan</h2>
 
-<div class="card">
-  <h1>AI Undangan Pernikahan</h1>
+    <textarea id="inputText" placeholder="Tulis bebas: lokasi, bulan/tanggal, akad pagi / resepsi sore, dll."></textarea>
 
-  <p>Tulis bebas rencana pernikahanmu:</p>
-  <textarea id="inputText" placeholder="Contoh: Nikah di Bandung bulan Juli, akad pagi, resepsi siang, ketemu pas kerja"></textarea>
+    <div class="row">
+      <input id="overrideLocation" placeholder="Lokasi (opsional) contoh: Gedung Serbaguna BSD">
+      <input id="overrideMaps" placeholder="Link Google Maps / alamat (opsional)">
+    </div>
 
-  <p>Pilih lagu undangan:</p>
-  <select id="musicSelect">
-    <option value="wedding1.mp3">🎵 You're Still The One – Shania Twain</option>
-    <option value="wedding2.mp3">🎵 Pilihanku – MALIQ & D'Essentials</option>
-    <option value="wedding3.mp3">🎵 Beautiful In White – Shane Filan</option>
-  </select>
+    <div class="row">
+      <input id="overrideDate" placeholder="Tanggal (opsional) contoh: 20 Juli 2026">
+      <input id="overrideTimes" placeholder="Waktu (opsional) contoh: Akad 09.00, Resepsi 11.00">
+    </div>
 
-  <button onclick="generateAI()">✨ Generate Undangan AI</button>
+    <select id="musicSelect">
+      <option value="wedding1.mp3">🎵 You're Still The One – Shania Twain</option>
+      <option value="wedding2.mp3">🎵 Pilihanku – MALIQ & D'Essentials</option>
+      <option value="wedding3.mp3">🎵 Beautiful In White – Shane Filan</option>
+    </select>
 
-  <pre id="result">Hasil AI akan muncul di sini…</pre>
+    <div class="row">
+      <input type="file" id="groomPhoto" accept="image/*">
+      <input type="file" id="bridePhoto" accept="image/*">
+    </div>
+    <input type="file" id="galleryPhotos" accept="image/*" multiple>
 
-  <button class="secondary" onclick="saveAndOpen()">➡️ Buat Web Undangan</button>
+    <button onclick="generateAI()">✨ Generate Undangan AI</button>
+    <pre id="result">Hasil AI muncul di sini…</pre>
 
-  <div class="info">
-    Gratis • Tanpa registrasi • Dibuat dengan AI
+    <button class="secondary" onclick="saveAndOpen()">➡️ Buat Web Undangan</button>
+
+    <div class="small">
+      Foto akan dikompres otomatis supaya ringan. Musik tetap file .mp3 di repo GitHub.
+    </div>
   </div>
-</div>
 
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
