--- a/undangan.html
+++ b/undangan.html
@@ -1,168 +1,403 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <title>Undangan</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body{margin:0;font-family:Segoe UI,Arial;background:#f7f4ef;color:#333}
-    header{background:linear-gradient(135deg,#b11226,#7b0f1d);color:#fff;padding:44px 18px;text-align:center}
-    section{max-width:900px;margin:auto;padding:22px 16px}
-    .box{background:#fff;border-radius:16px;padding:18px;box-shadow:0 10px 28px rgba(0,0,0,.08)}
-    h2{color:#b11226;text-align:center}
-    iframe{width:100%;height:280px;border:0;border-radius:14px;margin-top:10px}
-    .row{display:grid;grid-template-columns:1fr 1fr;gap:10px}
-    img.portrait{width:100%;border-radius:14px;object-fit:cover}
-    .gallery{display:grid;grid-template-columns:repeat(auto-fill,minmax(110px,1fr));gap:10px;margin-top:12px}
-    .gallery img{width:100%;border-radius:12px}
-    .music{position:fixed;bottom:18px;right:18px;background:#b11226;width:56px;height:56px;border-radius:50%;display:flex;align-items:center;justify-content:center;color:#fff;font-size:22px;box-shadow:0 10px 24px rgba(0,0,0,.25);cursor:pointer}
-    input,textarea{width:100%;padding:12px;border-radius:10px;border:1px solid #ddd;margin-top:10px}
-    button{width:100%;padding:14px;border-radius:14px;border:none;background:#b11226;color:#fff;margin-top:10px}
-    .guest{background:#fff;padding:12px;border-radius:12px;margin-top:10px;box-shadow:0 4px 12px rgba(0,0,0,.06)}
-    .small{font-size:12px;color:#777;text-align:center;margin-top:10px}
-  </style>
+<meta charset="UTF-8">
+<title>Undangan Pernikahan</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+
+<style>
+:root{
+  --gold:#c9a24d;
+  --cream:#f7f3ea;
+  --dark:#333;
+}
+*{box-sizing:border-box}
+html{scroll-behavior:smooth}
+body{
+  margin:0;
+  font-family:'Poppins',sans-serif;
+  background:var(--cream);
+  color:var(--dark);
+}
+
+/* HERO */
+.hero{
+  min-height:100vh;
+  background:
+    linear-gradient(rgba(0,0,0,.55),rgba(0,0,0,.55)),
+    url('https://images.unsplash.com/photo-1523438885200-e635ba2c371e?auto=format&fit=crop&w=1200&q=80');
+  background-size:cover;
+  background-position:center;
+  color:#fff;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  text-align:center;
+  padding:30px;
+}
+.hero h1{
+  font-family:'Playfair Display',serif;
+  font-size:36px;
+  margin:12px 0;
+}
+.hero .small{letter-spacing:3px;font-size:13px}
+.hero button{
+  margin-top:20px;
+  padding:14px 30px;
+  border-radius:40px;
+  border:none;
+  background:var(--gold);
+  color:#fff;
+  font-size:16px;
+}
+
+/* SECTION */
+section{
+  padding:60px 20px;
+  max-width:1100px;
+  margin:auto;
+}
+h2{
+  font-family:'Playfair Display',serif;
+  text-align:center;
+  color:var(--gold);
+  margin-bottom:28px;
+}
+.card{
+  background:#fff;
+  border-radius:18px;
+  padding:20px;
+  box-shadow:0 12px 30px rgba(0,0,0,.08);
+}
+
+/* COUPLE */
+.couple{
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:22px;
+}
+.person{text-align:center}
+.person img{
+  width:170px;height:170px;
+  border-radius:50%;
+  border:5px solid var(--gold);
+  object-fit:cover;
+}
+
+/* EVENT */
+.event{
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:16px;
+}
+.event .card i{
+  font-size:26px;
+  color:var(--gold);
+  margin-bottom:8px;
+}
+
+/* COUNTDOWN */
+.countdown{
+  display:flex;
+  justify-content:center;
+  gap:12px;
+}
+.time{
+  background:#fff;
+  width:80px;
+  padding:14px;
+  border-radius:16px;
+  text-align:center;
+}
+.time span{
+  display:block;
+  font-size:22px;
+  font-weight:700;
+  color:var(--gold);
+}
+
+/* GALLERY */
+.gallery{
+  display:grid;
+  grid-template-columns:repeat(auto-fill,minmax(140px,1fr));
+  gap:12px;
+}
+.gallery img{
+  width:100%;
+  height:160px;
+  object-fit:cover;
+  border-radius:14px;
+  cursor:pointer;
+}
+#lightbox{
+  position:fixed;inset:0;
+  background:rgba(0,0,0,.85);
+  display:none;
+  align-items:center;
+  justify-content:center;
+  z-index:999;
+}
+#lightbox img{
+  max-width:95%;
+  max-height:90%;
+  border-radius:18px;
+}
+
+/* MAP */
+iframe{
+  width:100%;
+  height:320px;
+  border:0;
+  border-radius:18px;
+}
+
+/* MUSIC */
+.music-btn{
+  position:fixed;
+  bottom:20px;
+  right:20px;
+  width:56px;height:56px;
+  border-radius:50%;
+  background:var(--gold);
+  color:#fff;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:22px;
+  cursor:pointer;
+  box-shadow:0 10px 26px rgba(0,0,0,.25);
+}
+
+/* FOOTER */
+footer{
+  text-align:center;
+  padding:40px 20px;
+  font-family:'Playfair Display',serif;
+}
+
+@media(max-width:768px){
+  .couple,.event{grid-template-columns:1fr}
+  .hero h1{font-size:30px}
+}
+</style>
 </head>
+
 <body>
 
-<header>
-  <h1 id="coupleTitle">Undangan</h1>
-  <p id="eventLine">Mohon doa restu</p>
-</header>
-
-<section>
-  <h2>Foto Mempelai</h2>
-  <div class="row">
-    <div class="box"><img id="groomImg" class="portrait" alt="Foto (Namamu)"></div>
-    <div class="box"><img id="brideImg" class="portrait" alt="Foto (Nama Pasanganmu)"></div>
-  </div>
-
-  <div class="box" style="margin-top:12px">
-    <h2>Undangan</h2>
-    <pre id="invitationText" style="white-space:pre-wrap;margin:0">⏳ Memuat…</pre>
-  </div>
-
-  <div class="box" style="margin-top:12px">
-    <h2>Galeri</h2>
-    <div id="gallery" class="gallery"></div>
+<!-- HERO -->
+<section class="hero">
+  <div>
+    <div class="small">THE WEDDING OF</div>
+    <h1 id="heroNames">(Namamu) & (Nama Pasanganmu)</h1>
+    <p id="heroDate">Tanggal Acara</p>
+    <button onclick="openInvitation()">Buka Undangan</button>
   </div>
 </section>
 
-<section>
-  <h2>Lokasi Acara</h2>
-  <div class="box">
-    <div id="locText"></div>
-    <iframe id="map"></iframe>
-    <button onclick="shareWA()">📤 Share WhatsApp</button>
+<!-- PASANGAN -->
+<section id="content">
+<h2>Pasangan</h2>
+<div class="couple">
+  <div class="person card">
+    <img id="groomImg" src="https://via.placeholder.com/600x600?text=Foto+(Namamu)">
+    <h3 id="groomName">(Namamu)</h3>
   </div>
-  <div class="small">Tap layar sekali untuk mulai musik (aturan browser).</div>
+  <div class="person card">
+    <img id="brideImg" src="https://via.placeholder.com/600x600?text=Foto+(Nama+Pasanganmu)">
+    <h3 id="brideName">(Nama Pasanganmu)</h3>
+  </div>
+</div>
+
+<p style="text-align:center;margin-top:26px;font-style:italic">
+  "Dan di antara tanda-tanda kekuasaan-Nya ialah Dia menciptakan pasangan-pasangan..."<br>
+  <strong>(QS. Ar-Rum: 21)</strong>
+</p>
 </section>
 
+<!-- EVENT -->
 <section>
-  <h2>Ucapan & Doa</h2>
-  <div class="box">
-    <input id="guestName" placeholder="Nama kamu">
-    <textarea id="guestMsg" placeholder="Tulis ucapan..." rows="3"></textarea>
-    <button onclick="sendGuest()">💌 Kirim Ucapan</button>
-    <div id="guestList"></div>
+<h2>Detail Acara</h2>
+<div class="event">
+  <div class="card">
+    <i class="fa-solid fa-mosque"></i>
+    <h3>Akad Nikah</h3>
+    <p id="akadInfo">-</p>
   </div>
+  <div class="card">
+    <i class="fa-solid fa-champagne-glasses"></i>
+    <h3>Resepsi</h3>
+    <p id="resepsiInfo">-</p>
+  </div>
+</div>
 </section>
 
-<div class="music" onclick="toggleMusic()">🎵</div>
+<!-- COUNTDOWN -->
+<section>
+<h2>Hitung Mundur</h2>
+<div class="countdown">
+  <div class="time"><span id="d">0</span>Hari</div>
+  <div class="time"><span id="h">0</span>Jam</div>
+  <div class="time"><span id="m">0</span>Menit</div>
+  <div class="time"><span id="s">0</span>Detik</div>
+</div>
+</section>
+
+<!-- GALLERY -->
+<section>
+<h2>Galeri</h2>
+<div class="gallery" id="gallery"></div>
+</section>
+
+<!-- MAP -->
+<section>
+<h2>Lokasi</h2>
+<div class="card">
+  <div id="locText">📍 Lokasi acara</div>
+  <iframe id="map"></iframe>
+  <a id="openMapsBtn" target="_blank"
+     style="display:block;margin-top:12px;text-align:center;
+            background:var(--gold);color:#fff;padding:12px;
+            border-radius:14px;text-decoration:none">
+    Buka di Google Maps
+  </a>
+</div>
+</section>
+
+<footer>
+Terima kasih atas doa & restunya<br>
+<strong id="footerNames">(Namamu) & (Nama Pasanganmu)</strong><br><br>
+<i class="fa-solid fa-heart"></i>
+</footer>
+
+<!-- LIGHTBOX -->
+<div id="lightbox" onclick="closeLightbox()">
+  <img id="lightboxImg">
+</div>
+
+<!-- MUSIC -->
+<audio id="music" loop>
+  <source id="musicSource" src="wedding1.mp3" type="audio/mpeg">
+</audio>
+<div class="music-btn" onclick="toggleMusic()">
+  <i class="fa-solid fa-music"></i>
+</div>
 
 <script>
+/* =============================
+   CONFIG
+============================= */
 const API = "https://dry-mud-3b8ai-undangan-api.etaweb90.workers.dev";
 const params = new URLSearchParams(location.search);
 const inviteId = params.get("id");
 
-let audio = new Audio();
-audio.loop = true;
-document.addEventListener("click", () => audio.play().catch(()=>{}), { once:true });
-function toggleMusic(){ audio.paused ? audio.play() : audio.pause(); }
-
-function mapToEmbed(queryOrUrl){
-  const s = (queryOrUrl || "").trim();
-  if (!s) return "https://www.google.com/maps?q=Indonesia&output=embed";
-  if (s.includes("google.com/maps") || s.includes("maps.app.goo.gl") || s.includes("maps.google")) {
-    // aman: tetap pakai q=URL (embed universal)
-    return "https://www.google.com/maps?q=" + encodeURIComponent(s) + "&output=embed";
-  }
-  return "https://www.google.com/maps?q=" + encodeURIComponent(s) + "&output=embed";
+/* =============================
+   MUSIC
+============================= */
+const music = document.getElementById("music");
+function openInvitation(){
+  document.getElementById("content").scrollIntoView({behavior:"smooth"});
+  music.play().catch(()=>{});
+}
+function toggleMusic(){
+  music.paused ? music.play().catch(()=>{}) : music.pause();
 }
 
+/* =============================
+   MAP HELPERS
+============================= */
+function mapEmbed(q){
+  return "https://www.google.com/maps?q="+encodeURIComponent(q||"Indonesia")+"&output=embed";
+}
+function mapOpen(q){
+  return "https://www.google.com/maps?q="+encodeURIComponent(q||"Indonesia");
+}
+
+/* =============================
+   COUNTDOWN
+============================= */
+let cdTimer=null;
+function startCountdown(dateStr){
+  const dObj=new Date(dateStr);
+  if(isNaN(dObj)) return;
+  const target=dObj.getTime();
+  clearInterval(cdTimer);
+  cdTimer=setInterval(()=>{
+    const diff=target-Date.now();
+    if(diff<=0) return;
+    d.textContent=Math.floor(diff/86400000);
+    h.textContent=Math.floor(diff/3600000)%24;
+    m.textContent=Math.floor(diff/60000)%60;
+    s.textContent=Math.floor(diff/1000)%60;
+  },1000);
+}
+
+/* =============================
+   LOAD FROM WORKER
+============================= */
 async function loadInvite(){
-  if(!inviteId){
-    document.getElementById("invitationText").textContent = "Link undangan tidak valid.";
-    return;
+  if(!inviteId) return;
+
+  const res=await fetch(API+"/invite/get?id="+inviteId);
+  if(!res.ok) return;
+  const data=await res.json();
+
+  const inv=data.invite||{};
+  heroNames.textContent=`${inv.groom||"(Namamu)"} & ${inv.bride||"(Nama Pasanganmu)"}`;
+  heroDate.textContent=inv.date||"";
+  groomName.textContent=inv.groom||"(Namamu)";
+  brideName.textContent=inv.bride||"(Nama Pasanganmu)";
+  footerNames.textContent=`${inv.groom||""} & ${inv.bride||""}`;
+
+  akadInfo.textContent=`${inv.date||""}\n${inv.akad_time||""}\n${inv.venue||""}`;
+  resepsiInfo.textContent=`${inv.date||""}\n${inv.resepsi_time||""}\n${inv.venue||""}`;
+
+  // MAP
+  const mq=inv.maps_query||inv.address||inv.venue;
+  locText.textContent="📍 "+(mq||"");
+  map.src=mapEmbed(mq);
+  openMapsBtn.href=mapOpen(mq);
+
+  // MUSIC
+  if(data.music){
+    musicSource.src=data.music;
+    music.load();
   }
-  const res = await fetch(API + "/invite/get?id=" + inviteId);
-  const data = await res.json();
 
-  const invite = data.invite || {};
-  document.getElementById("invitationText").textContent = data.aiText || invite.full_text || "";
-  document.getElementById("coupleTitle").textContent = `${invite.groom || "(Namamu)"} & ${invite.bride || "(Nama Pasanganmu)"}`;
-  document.getElementById("eventLine").textContent = `${invite.date || ""} • ${invite.venue || ""}`;
+  // PHOTOS
+  const photos=data.photos||{};
+  if(photos.groom) groomImg.src=photos.groom;
+  if(photos.bride) brideImg.src=photos.bride;
 
-  // musik
-  if (data.music) audio.src = data.music;
+  if(photos.gallery?.length){
+    gallery.innerHTML="";
+    photos.gallery.forEach(src=>{
+      const img=document.createElement("img");
+      img.src=src;
+      img.onclick=()=>openLightbox(src);
+      gallery.appendChild(img);
+    });
+  }
 
-  // maps
-  const mapsQuery = invite.maps_query || invite.address || invite.venue || "";
-  document.getElementById("locText").textContent = mapsQuery ? ("📍 " + mapsQuery) : "";
-  document.getElementById("map").src = mapToEmbed(mapsQuery);
-
-  // foto
-  const photos = data.photos || {};
-  document.getElementById("groomImg").src = photos.groom || "https://via.placeholder.com/600x600?text=Foto+(Namamu)";
-  document.getElementById("brideImg").src = photos.bride || "https://via.placeholder.com/600x600?text=Foto+(Nama+Pasanganmu)";
-
-  // galeri
-  const g = document.getElementById("gallery");
-  g.innerHTML = "";
-  (photos.gallery || []).forEach(src => {
-    const img = document.createElement("img");
-    img.src = src;
-    g.appendChild(img);
-  });
+  startCountdown(inv.date);
 }
 
-function shareWA(){
-  const text = encodeURIComponent("Assalamu’alaikum,\n\nKami mengundang Anda ke acara pernikahan kami.\n\n" + location.href);
-  window.open("https://wa.me/?text=" + text, "_blank");
+/* =============================
+   LIGHTBOX
+============================= */
+function openLightbox(src){
+  lightbox.style.display="flex";
+  lightboxImg.src=src;
 }
-
-// guestbook
-async function sendGuest(){
-  const name = guestName.value.trim();
-  const message = guestMsg.value.trim();
-  if(!name || !message) return;
-
-  await fetch(API + "/guestbook/add", {
-    method:"POST",
-    headers:{ "Content-Type":"application/json" },
-    body: JSON.stringify({ inviteId, name, message })
-  });
-
-  guestName.value = "";
-  guestMsg.value = "";
-  loadGuestbook();
-}
-
-async function loadGuestbook(){
-  const res = await fetch(API + "/guestbook/list?id=" + inviteId);
-  const list = await res.json();
-
-  const box = document.getElementById("guestList");
-  box.innerHTML = "";
-  list.slice().reverse().forEach(item => {
-    const div = document.createElement("div");
-    div.className = "guest";
-    div.innerHTML = `<strong>${item.name}</strong><br>${item.message}`;
-    box.appendChild(div);
-  });
+function closeLightbox(){
+  lightbox.style.display="none";
+  lightboxImg.src="";
 }
 
 loadInvite();
-loadGuestbook();
 </script>
+
 </body>
 </html>
