remove undangan.html content

--- a/undangan.html
+++ b/undangan.html
@@ -1,403 +1,1 @@
-<!DOCTYPE html>
-<html lang="id">
-<head>
-<meta charset="UTF-8">
-<title>Undangan Pernikahan</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
-
-<style>
-:root{
-  --gold:#c9a24d;
-  --cream:#f7f3ea;
-  --dark:#333;
-}
-*{box-sizing:border-box}
-html{scroll-behavior:smooth}
-body{
-  margin:0;
-  font-family:'Poppins',sans-serif;
-  background:var(--cream);
-  color:var(--dark);
-}
-
-/* HERO */
-.hero{
-  min-height:100vh;
-  background:
-    linear-gradient(rgba(0,0,0,.55),rgba(0,0,0,.55)),
-    url('https://images.unsplash.com/photo-1523438885200-e635ba2c371e?auto=format&fit=crop&w=1200&q=80');
-  background-size:cover;
-  background-position:center;
-  color:#fff;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  text-align:center;
-  padding:30px;
-}
-.hero h1{
-  font-family:'Playfair Display',serif;
-  font-size:36px;
-  margin:12px 0;
-}
-.hero .small{letter-spacing:3px;font-size:13px}
-.hero button{
-  margin-top:20px;
-  padding:14px 30px;
-  border-radius:40px;
-  border:none;
-  background:var(--gold);
-  color:#fff;
-  font-size:16px;
-}
-
-/* SECTION */
-section{
-  padding:60px 20px;
-  max-width:1100px;
-  margin:auto;
-}
-h2{
-  font-family:'Playfair Display',serif;
-  text-align:center;
-  color:var(--gold);
-  margin-bottom:28px;
-}
-.card{
-  background:#fff;
-  border-radius:18px;
-  padding:20px;
-  box-shadow:0 12px 30px rgba(0,0,0,.08);
-}
-
-/* COUPLE */
-.couple{
-  display:grid;
-  grid-template-columns:1fr 1fr;
-  gap:22px;
-}
-.person{text-align:center}
-.person img{
-  width:170px;height:170px;
-  border-radius:50%;
-  border:5px solid var(--gold);
-  object-fit:cover;
-}
-
-/* EVENT */
-.event{
-  display:grid;
-  grid-template-columns:1fr 1fr;
-  gap:16px;
-}
-.event .card i{
-  font-size:26px;
-  color:var(--gold);
-  margin-bottom:8px;
-}
-
-/* COUNTDOWN */
-.countdown{
-  display:flex;
-  justify-content:center;
-  gap:12px;
-}
-.time{
-  background:#fff;
-  width:80px;
-  padding:14px;
-  border-radius:16px;
-  text-align:center;
-}
-.time span{
-  display:block;
-  font-size:22px;
-  font-weight:700;
-  color:var(--gold);
-}
-
-/* GALLERY */
-.gallery{
-  display:grid;
-  grid-template-columns:repeat(auto-fill,minmax(140px,1fr));
-  gap:12px;
-}
-.gallery img{
-  width:100%;
-  height:160px;
-  object-fit:cover;
-  border-radius:14px;
-  cursor:pointer;
-}
-#lightbox{
-  position:fixed;inset:0;
-  background:rgba(0,0,0,.85);
-  display:none;
-  align-items:center;
-  justify-content:center;
-  z-index:999;
-}
-#lightbox img{
-  max-width:95%;
-  max-height:90%;
-  border-radius:18px;
-}
-
-/* MAP */
-iframe{
-  width:100%;
-  height:320px;
-  border:0;
-  border-radius:18px;
-}
-
-/* MUSIC */
-.music-btn{
-  position:fixed;
-  bottom:20px;
-  right:20px;
-  width:56px;height:56px;
-  border-radius:50%;
-  background:var(--gold);
-  color:#fff;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-size:22px;
-  cursor:pointer;
-  box-shadow:0 10px 26px rgba(0,0,0,.25);
-}
-
-/* FOOTER */
-footer{
-  text-align:center;
-  padding:40px 20px;
-  font-family:'Playfair Display',serif;
-}
-
-@media(max-width:768px){
-  .couple,.event{grid-template-columns:1fr}
-  .hero h1{font-size:30px}
-}
-</style>
-</head>
-
-<body>
-
-<!-- HERO -->
-<section class="hero">
-  <div>
-    <div class="small">THE WEDDING OF</div>
-    <h1 id="heroNames">(Namamu) & (Nama Pasanganmu)</h1>
-    <p id="heroDate">Tanggal Acara</p>
-    <button onclick="openInvitation()">Buka Undangan</button>
-  </div>
-</section>
-
-<!-- PASANGAN -->
-<section id="content">
-<h2>Pasangan</h2>
-<div class="couple">
-  <div class="person card">
-    <img id="groomImg" src="https://via.placeholder.com/600x600?text=Foto+(Namamu)">
-    <h3 id="groomName">(Namamu)</h3>
-  </div>
-  <div class="person card">
-    <img id="brideImg" src="https://via.placeholder.com/600x600?text=Foto+(Nama+Pasanganmu)">
-    <h3 id="brideName">(Nama Pasanganmu)</h3>
-  </div>
-</div>
-
-<p style="text-align:center;margin-top:26px;font-style:italic">
-  "Dan di antara tanda-tanda kekuasaan-Nya ialah Dia menciptakan pasangan-pasangan..."<br>
-  <strong>(QS. Ar-Rum: 21)</strong>
-</p>
-</section>
-
-<!-- EVENT -->
-<section>
-<h2>Detail Acara</h2>
-<div class="event">
-  <div class="card">
-    <i class="fa-solid fa-mosque"></i>
-    <h3>Akad Nikah</h3>
-    <p id="akadInfo">-</p>
-  </div>
-  <div class="card">
-    <i class="fa-solid fa-champagne-glasses"></i>
-    <h3>Resepsi</h3>
-    <p id="resepsiInfo">-</p>
-  </div>
-</div>
-</section>
-
-<!-- COUNTDOWN -->
-<section>
-<h2>Hitung Mundur</h2>
-<div class="countdown">
-  <div class="time"><span id="d">0</span>Hari</div>
-  <div class="time"><span id="h">0</span>Jam</div>
-  <div class="time"><span id="m">0</span>Menit</div>
-  <div class="time"><span id="s">0</span>Detik</div>
-</div>
-</section>
-
-<!-- GALLERY -->
-<section>
-<h2>Galeri</h2>
-<div class="gallery" id="gallery"></div>
-</section>
-
-<!-- MAP -->
-<section>
-<h2>Lokasi</h2>
-<div class="card">
-  <div id="locText">📍 Lokasi acara</div>
-  <iframe id="map"></iframe>
-  <a id="openMapsBtn" target="_blank"
-     style="display:block;margin-top:12px;text-align:center;
-            background:var(--gold);color:#fff;padding:12px;
-            border-radius:14px;text-decoration:none">
-    Buka di Google Maps
-  </a>
-</div>
-</section>
-
-<footer>
-Terima kasih atas doa & restunya<br>
-<strong id="footerNames">(Namamu) & (Nama Pasanganmu)</strong><br><br>
-<i class="fa-solid fa-heart"></i>
-</footer>
-
-<!-- LIGHTBOX -->
-<div id="lightbox" onclick="closeLightbox()">
-  <img id="lightboxImg">
-</div>
-
-<!-- MUSIC -->
-<audio id="music" loop>
-  <source id="musicSource" src="wedding1.mp3" type="audio/mpeg">
-</audio>
-<div class="music-btn" onclick="toggleMusic()">
-  <i class="fa-solid fa-music"></i>
-</div>
-
-<script>
-/* =============================
-   CONFIG
-============================= */
-const API = "https://dry-mud-3b8ai-undangan-api.etaweb90.workers.dev";
-const params = new URLSearchParams(location.search);
-const inviteId = params.get("id");
-
-/* =============================
-   MUSIC
-============================= */
-const music = document.getElementById("music");
-function openInvitation(){
-  document.getElementById("content").scrollIntoView({behavior:"smooth"});
-  music.play().catch(()=>{});
-}
-function toggleMusic(){
-  music.paused ? music.play().catch(()=>{}) : music.pause();
-}
-
-/* =============================
-   MAP HELPERS
-============================= */
-function mapEmbed(q){
-  return "https://www.google.com/maps?q="+encodeURIComponent(q||"Indonesia")+"&output=embed";
-}
-function mapOpen(q){
-  return "https://www.google.com/maps?q="+encodeURIComponent(q||"Indonesia");
-}
-
-/* =============================
-   COUNTDOWN
-============================= */
-let cdTimer=null;
-function startCountdown(dateStr){
-  const dObj=new Date(dateStr);
-  if(isNaN(dObj)) return;
-  const target=dObj.getTime();
-  clearInterval(cdTimer);
-  cdTimer=setInterval(()=>{
-    const diff=target-Date.now();
-    if(diff<=0) return;
-    d.textContent=Math.floor(diff/86400000);
-    h.textContent=Math.floor(diff/3600000)%24;
-    m.textContent=Math.floor(diff/60000)%60;
-    s.textContent=Math.floor(diff/1000)%60;
-  },1000);
-}
-
-/* =============================
-   LOAD FROM WORKER
-============================= */
-async function loadInvite(){
-  if(!inviteId) return;
-
-  const res=await fetch(API+"/invite/get?id="+inviteId);
-  if(!res.ok) return;
-  const data=await res.json();
-
-  const inv=data.invite||{};
-  heroNames.textContent=`${inv.groom||"(Namamu)"} & ${inv.bride||"(Nama Pasanganmu)"}`;
-  heroDate.textContent=inv.date||"";
-  groomName.textContent=inv.groom||"(Namamu)";
-  brideName.textContent=inv.bride||"(Nama Pasanganmu)";
-  footerNames.textContent=`${inv.groom||""} & ${inv.bride||""}`;
-
-  akadInfo.textContent=`${inv.date||""}\n${inv.akad_time||""}\n${inv.venue||""}`;
-  resepsiInfo.textContent=`${inv.date||""}\n${inv.resepsi_time||""}\n${inv.venue||""}`;
-
-  // MAP
-  const mq=inv.maps_query||inv.address||inv.venue;
-  locText.textContent="📍 "+(mq||"");
-  map.src=mapEmbed(mq);
-  openMapsBtn.href=mapOpen(mq);
-
-  // MUSIC
-  if(data.music){
-    musicSource.src=data.music;
-    music.load();
-  }
-
-  // PHOTOS
-  const photos=data.photos||{};
-  if(photos.groom) groomImg.src=photos.groom;
-  if(photos.bride) brideImg.src=photos.bride;
-
-  if(photos.gallery?.length){
-    gallery.innerHTML="";
-    photos.gallery.forEach(src=>{
-      const img=document.createElement("img");
-      img.src=src;
-      img.onclick=()=>openLightbox(src);
-      gallery.appendChild(img);
-    });
-  }
-
-  startCountdown(inv.date);
-}
-
-/* =============================
-   LIGHTBOX
-============================= */
-function openLightbox(src){
-  lightbox.style.display="flex";
-  lightboxImg.src=src;
-}
-function closeLightbox(){
-  lightbox.style.display="none";
-  lightboxImg.src="";
-}
-
-loadInvite();
-</script>
-
-</body>
-</html>
+// deleted
